# ratatui-wgpu

./: .gitattributes  Cargo.toml  README.md  rustfmt.toml
examples/: README.md  colors.rs  hello_pipeline.rs  hello_world.rs
examples/assets/: chromatic_aberration.wgsl
examples/web/: hello_crt.rs  hello_web.rs  hello_webworker.rs  index.html  render_worker.js
src/: colors.rs  fonts.rs  lib.rs  shaders.rs  wgpu_backend.rs
src/backend/: builder.rs  mod.rs  wgpu_backend.rs
src/backend/fonts/: FairfaxOFL.txt
src/backend/shaders/: composite.wgsl  composite_bg.wgsl  composite_fg.wgsl
src/graphics/: mod.rs
src/shaders/: blit.wgsl  blur.wgsl  crt.wgsl
src/utils/: lru.rs  mod.rs  plan_cache.rs  text_atlas.rs
