[package]
license      = "MIT OR Apache-2.0"
name         = "ratatui-wgpu"
version      = "0.1.5"
edition      = "2021"
rust-version = "1.75.0"
repository   = "https://github.com/Jesterhearts/ratatui-wgpu"
description  = "A wgpu based backend for ratatui."
keywords     = [ "wasm", "tui", "rendering" ]

[features]
default = [ "ahash", "png" ]
ahash   = [ "dep:ahash" ]
# This feature is deprecated and will be removed. It currently does nothing.
colr_v1 = [  ]
png     = [ "dep:png" ]
web     = [ "wgpu/webgl" ]

[[example]]
name              = "hello_web"
path              = "examples/web/hello_web.rs"
required-features = [ "web" ]

[[example]]
name              = "hello_webworker"
path              = "examples/web/hello_webworker.rs"
required-features = [ "web" ]

[dependencies]
ahash              = { version = "0.8.11", default-features = false, features = [ "std", "compile-time-rng" ], optional = true }
bitvec             = { version = "1.0.1", default-features = false, features = [ "std" ] }
bytemuck           = { version = "1.19.0", features = [ "derive" ] }
indexmap           = { version = "2.6.0", default-features = false, features = [ "std" ] }
log                = { version = "0.4.22", default-features = false }
png                = { version = "0.17.14", optional = true }
raqote             = { version = "0.8.5", default-features = false }
ratatui            = { version = "0.29.0", default-features = false }
rustybuzz          = "0.20.0"
thiserror          = "2.0.3"
unicode-bidi       = "0.3.17"
unicode-properties = "0.1.3"
unicode-width      = "0.2.0"
web-time           = "1.1.0"
wgpu               = "23.0.0"

[dev-dependencies]
anyhow                   = "1.0.93"
chrono                   = "0.4.38"
console_error_panic_hook = "0.1.7"
console_log              = "1.0.0"
crossbeam-queue          = "0.3.11"
env_logger               = "0.11.5"
fontdb                   = "0.23.0"
futures-lite             = "2.5.0"
image                    = { version = "0.25.5", default-features = false, features = [ "png" ] }
js-sys                   = "0.3.72"
oneshot                  = "0.1.8"
palette                  = "0.7.6"
serial_test              = "3.2.0"
wasm-bindgen             = "0.2.95"
wasm-bindgen-futures     = "0.4.45"
web-sys                  = { version = "0.3.72", features = [ "MessageEvent", "Worker", "WorkerOptions", "WorkerType" ] }
winit                    = "0.30.5"
